Modificación del planteamiento de los coches debido a fallos a la hora de ejecutar las crud
